--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3"
   }
 }
