fix pipeline errors

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,10 +31,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=backend --include-workspace-root
 
       - name: Lint
         run: npm run lint
@@ -59,10 +59,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=backend --include-workspace-root
 
       - name: Run unit tests (Jest)
         run: npm run test
@@ -83,10 +83,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=backend --include-workspace-root
 
       - name: Build
         run: npm run build
