--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,10 +28,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=frontend --include-workspace-root
 
       - name: Lint
         run: npm run lint
@@ -52,10 +52,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=frontend --include-workspace-root
 
       - name: Run tests (Vitest)
         run: npm run test
@@ -76,10 +76,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --workspace=frontend --include-workspace-root
 
       - name: Build
         run: npm run build
