--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,17 +18,21 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: pnpm/action-setup@v4
+      with:
+        version: latest
+
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: apps/frontend/package-lock.json
+        cache: 'pnpm'
+        cache-dependency-path: pnpm-lock.yaml
 
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run test -- --run
+    - run: pnpm install --frozen-lockfile
+    - run: pnpm lint
+    - run: pnpm test -- --run
     - name: Build
-      run: npm run build
+      run: pnpm build
       env:
         VITE_API_URL: ${{ secrets.VITE_API_URL }}
         VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
