--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,7 +26,7 @@ jobs:
 
     - run: npm ci
     - run: npm run lint
-    - run: npm run test -- --run
+    - run: npm run test -- --run --passWithNoTests
     - name: Build
       run: npm run build
       env:
