--- a/backend/package.json
+++ b/backend/package.json
@@ -54,7 +54,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|test)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": [
         "ts-jest",
