--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,14 @@
-name: Build & Push Docker Images
+name: CI / Deploy
 
 # Triggers:
 #   - Every push to main (rolling "latest" tag)
 #   - Every semver tag push, e.g. v1.2.3  (immutable versioned tag)
-#   - Manual dispatch from the GitHub Actions UI (useful for re-tagging)
+#   - Manual dispatch from the GitHub Actions UI
 on:
   push:
     branches: [ main ]
     tags: [ 'v*.*.*' ]
   workflow_dispatch:
-
 
 env:
   BACKEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/freelancer-dashboard-api
@@ -17,15 +16,38 @@ env:
 
 jobs:
   # ---------------------------------------------------------------------------
-  # Backend — NestJS API
+  # 1. Lint — frontend source must be clean before anything is built
+  # ---------------------------------------------------------------------------
+  lint:
+    name: Lint frontend
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: package-lock.json
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Lint
+      run: npm run lint
+      working-directory: frontend
+
+  # ---------------------------------------------------------------------------
+  # 2. Build backend Docker image (runs only after lint passes)
   # ---------------------------------------------------------------------------
   build-backend:
     name: Backend Docker image
     runs-on: ubuntu-latest
+    needs: lint
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -55,20 +77,19 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
   # ---------------------------------------------------------------------------
-  # Frontend — React + Vite → nginx static image
+  # 3. Build & deploy frontend Docker image (runs only after backend passes)
   # ---------------------------------------------------------------------------
   build-frontend:
     name: Frontend Docker image
     runs-on: ubuntu-latest
+    needs: build-backend
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -98,7 +119,6 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-
         build-args: |
           VITE_API_URL=${{ secrets.VITE_API_URL }}
           VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
